ENH: add3 daughters to one track for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,12 @@ PROJECT(lineageTreeWriter)
  
 FIND_PACKAGE(VTK REQUIRED)
 INCLUDE(${VTK_USE_FILE})
+
+FIND_PACKAGE( Qt4 4.5 REQUIRED QtCore QtGui )
+INCLUDE(${QT_USE_FILE})
  
 ADD_EXECUTABLE(lineageTreeWriter lineageTreeWriter.cxx)
-TARGET_LINK_LIBRARIES(lineageTreeWriter vtkHybrid vtkInfovis vtkViews)
+TARGET_LINK_LIBRARIES(lineageTreeWriter
+  vtkHybrid vtkInfovis vtkViews QVTK
+  ${QT_LIBRARIES}
+  )
